force-app/main/default/objects/Relevel_BackEnd_API__mdt/Relevel_BackEnd_API__mdt.object-meta.xml
<CustomObject>
    <label>Relevel BackEnd API</label>
    <pluralLabel>Relevel BackEnd API</pluralLabel>
</CustomObject>