force-app/main/default/objects/Relevel_BackEnd_API__mdt/fields/Accept__c.field-meta.xml
<CustomField>
    <fullName>Accept__c</fullName>
    <label>Accept</label>
    <length>255</length>
    <type>Text</type>
</CustomField>