force-app/main/default/objects/Relevel_BackEnd_API__mdt/fields/Auth_Header__c.field-meta.xml
<CustomField>
    <fullName>Auth_Header__c</fullName>
    <label>Auth Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>