force-app/main/default/objects/Relevel_BackEnd_API__mdt/fields/Auth_Key__c.field-meta.xml
<CustomField>
    <fullName>Auth_Key__c</fullName>
    <label>Auth Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>